# roboplan

./: CMakeLists.txt  pixi.toml  pyproject.toml
.docker/ros/: Dockerfile
.docker/ubuntu/: Dockerfile
.github/workflows/: build_and_test.yml
benchmarks/: test_benchmark_rrt.py
bindings/: CMakeLists.txt  package.xml
bindings/src/modules/: core.cpp  optimal_ik.cpp
bindings/src/roboplan/: interpolation.py  visualization.py
bindings/src/roboplan/roboplan_ext/: core.pyi  optimal_ik.pyi
bindings/test/: test_scene.py
cmake/roboplan_cmeel_repair/: CMakeLists.txt
cmake/roboplan_unified_repair/: CMakeLists.txt
docs/source/: conf.py
docs/source/concepts/: inverse_kinematics.rst
docs/source/getting_started/: contributor_guide.rst  installation.rst
packaging/cmeel/libroboplan/: pyproject.toml
packaging/cmeel/roboplan/: pyproject.toml
roboplan/: CMakeLists.txt  package.xml  pyproject.toml
roboplan/bindings/: CMakeLists.txt
roboplan/bindings/python/roboplan/core/: _core_ext.pyi
roboplan/bindings/src/: core.cpp
roboplan/bindings/test/: test_import.py
roboplan/include/roboplan/core/: collision_context.hpp  geometry_wrappers.hpp  path_utils.hpp  scene.hpp  scene_utils.hpp  types.hpp
roboplan/src/core/: collision_context.cpp  path_utils.cpp  scene.cpp  scene_utils.cpp  types.cpp
roboplan/test/: CMakeLists.txt  test_path_utils.cpp  test_scene.cpp
roboplan_example_models/: CMakeLists.txt  package.xml  pyproject.toml
roboplan_example_models/bindings/: CMakeLists.txt
roboplan_example_models/models/reachback_robot_model/: reachback_config.yaml
roboplan_example_models/models/stretch4_robot_model/: stretch4_sg4.srdf  stretch4_sg4.urdf  stretch4_sg4_config.yaml
roboplan_examples/: package.xml
roboplan_examples/cpp/: example_rrt.cpp
roboplan_examples/python/: CMakeLists.txt  common.py  example_action_chunk_tracking.py  example_dual_arm.py  example_ik.py  example_oink.py  example_oink_with_barriers.py  example_rrt.py
roboplan_oink/: CMakeLists.txt  package.xml  pyproject.toml
roboplan_oink/bindings/: CMakeLists.txt
roboplan_oink/include/roboplan_oink/: optimal_ik.hpp
roboplan_oink/src/: optimal_ik.cpp
roboplan_oink/test/: test_oink.cpp
roboplan_rrt/: CMakeLists.txt  package.xml  pyproject.toml
roboplan_rrt/bindings/: CMakeLists.txt
roboplan_rrt/include/roboplan_rrt/: rrt.hpp
roboplan_rrt/src/: rrt.cpp
roboplan_rrt/test/: test_rrt.cpp
roboplan_simple_ik/: CMakeLists.txt  package.xml  pyproject.toml
roboplan_simple_ik/bindings/: CMakeLists.txt
roboplan_simple_ik/bindings/python/roboplan/simple_ik/: _simple_ik_ext.pyi
roboplan_simple_ik/bindings/src/: simple_ik.cpp
roboplan_simple_ik/include/roboplan_simple_ik/: simple_ik.hpp
roboplan_simple_ik/src/: simple_ik.cpp
roboplan_toppra/: CMakeLists.txt  package.xml  pyproject.toml
roboplan_toppra/bindings/: CMakeLists.txt
roboplan_toppra/src/: toppra.cpp
tests/: test_unified_python_package.py
