[build-system]
requires = [
    "scikit-build-core >=0.10",
    "cmeel-eigen[build]",
    "cmeel-yaml-cpp[build]",
    "libpinocchio[build] == 4.0.0",
    "nanobind >=1.3.2",
    "patchelf; platform_system == 'Linux'",
]
build-backend = "scikit_build_core.build"

[project]
name = "roboplan"
version = "0.4.0"
description = "Modern robot motion planning library based on Pinocchio."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Sebastian Castro", email = "sebas.a.castro@gmail.com" },
    { name = "JafarAbdi", email = "jafar.uruc@gmail.com" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "matplotlib",
    "numpy",
    "pin",
]

[project.urls]
Homepage = "https://github.com/sea-bass/roboplan"

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"
cmake.define.BUILD_PYTHON_BINDINGS = "ON"
cmake.define.BUILD_TESTING = "OFF"
cmake.define.GENERATE_PYTHON_STUBS = "OFF"
cmake.define.CMAKE_POLICY_VERSION_MINIMUM = "3.5"
cmake.define.CMAKE_INSTALL_RPATH = "$ORIGIN/../../lib"
cmake.define.CMAKE_INSTALL_RPATH_USE_LINK_PATH = "FALSE"

[tool.scikit-build.sdist]
exclude = [".omo/**"]
