[build-system]
build-backend = "cmeel"
requires = [
  "cmeel[build]",
  "libroboplan == 0.4.0",
  "nanobind >=1.3.2",
  "numpy",
  "patchelf",
]

[project]
name = "roboplan"
version = "0.4.0"
description = "Python bindings for RoboPlan."
readme = "../../../README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
  { name = "Sebastian Castro", email = "sebas.a.castro@gmail.com" },
  { name = "JafarAbdi", email = "jafar.uruc@gmail.com" },
]
classifiers = [
  "License :: OSI Approved :: MIT License",
]
dependencies = [
  "libroboplan == 0.4.0",
  "matplotlib",
  "numpy",
  "pin == 4.0.0",
]

[project.urls]
Homepage = "https://github.com/sea-bass/roboplan"

[tool.cmeel]
source = "../../.."
run-tests = false
configure-args = [
  "-DROBOPLAN_CMEEL=ON",
  "-DBUILD_STANDALONE_PYTHON_BINDINGS=ON",
  "-DBUILD_PYTHON_BINDINGS=ON",
  "-DBUILD_TESTING=OFF",
  "-DBUILD_TESTING_OINK=OFF",
  "-DGENERATE_PYTHON_STUBS=OFF",
]
